--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -99,7 +99,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oMnUFBFb2RUb",
-        "outputId": "05dc9570-2775-4548-fe30-d9a84fcbec35"
+        "outputId": "05dc9570-2775-4548-fe30-d9a84fcbec35",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -753,21 +754,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 27,
       "metadata": {
-        "id": "Bi_yid0sMe3-"
+        "id": "Bi_yid0sMe3-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "outputId": "3bea914c-c010-4426-b40c-0043494b7575"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of states:  15\n",
+            "Different states:  {'ID', 'NH', 'NV', 'IN', 'FL', 'WA', 'NM', 'OR', 'MA', 'TX', 'CO', 'Ca', 'AZ', 'CA', 'UT'}\n"
+          ]
+        }
+      ],
       "source": [
         "# open file and init vars\n",
         "data = \"./sample_data/customers.csv\"\n",
+        "states = set()\n",
         "if not exists(datafile):\n",
         "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
         "\n",
         "with open(data, \"r\") as myfile:\n",
         "  csvreader = csv.reader(myfile, delimiter=\",\")\n",
-        "\n",
-        "# evaluate the contents of the file"
+        "  next(csvreader)\n",
+        "  for row in csvreader:\n",
+        "    state = row[4].strip()\n",
+        "    states.add(state)\n",
+        "print(\"Number of states: \", len(states))\n",
+        "print(\"Different states: \", states)\n",
+        "# evaluate the contents of the file\n"
       ]
     },
     {
@@ -788,6 +809,13 @@
       "outputs": [],
       "source": [
         "# open file and init vars\n",
+        "data = \"./sample_data/customers.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(data, \"r\") as myfile:\n",
+        "  csvreader = csv.reader(myfile, delimiter=\",\")\n",
+        "  next(csvreader)\n",
         "# evaluate the contents of the file"
       ]
     },
