--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -760,7 +760,6 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "outputId": "3bea914c-c010-4426-b40c-0043494b7575"
       },
       "outputs": [
@@ -802,20 +801,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
-        "id": "tfGU3w-OMhA9"
+        "id": "tfGU3w-OMhA9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a8ad6c6-6634-41cc-c2f5-f54f0a7d9d10"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "state with more customers is:  CA\n"
+          ]
+        }
+      ],
       "source": [
+        "from collections import Counter\n",
         "# open file and init vars\n",
         "data = \"./sample_data/customers.csv\"\n",
+        "count_states = Counter()\n",
+        "\n",
         "if not exists(datafile):\n",
         "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
         "\n",
         "with open(data, \"r\") as myfile:\n",
         "  csvreader = csv.reader(myfile, delimiter=\",\")\n",
         "  next(csvreader)\n",
+        "  for row in csvreader:\n",
+        "    state = row[4].strip()\n",
+        "    count_states[state] +=1\n",
+        "\n",
+        "common_state, quantity = count_states.most_common(1)[0]\n",
+        "print(\"state with more customers is: \", common_state)\n",
         "# evaluate the contents of the file"
       ]
     },
@@ -830,13 +850,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
-        "id": "8T0Ka2RqMi3P"
+        "id": "8T0Ka2RqMi3P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9d50a878-7d66-4ba7-d05b-82dbfccf688d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "state with less customers is:  IN\n"
+          ]
+        }
+      ],
       "source": [
         "# open file and init vars\n",
+        "from collections import Counter\n",
+        "# open file and init vars\n",
+        "data = \"./sample_data/customers.csv\"\n",
+        "count_states = Counter()\n",
+        "\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(data, \"r\") as myfile:\n",
+        "  csvreader = csv.reader(myfile, delimiter=\",\")\n",
+        "  next(csvreader)\n",
+        "  for row in csvreader:\n",
+        "    state = row[4].strip()\n",
+        "    count_states[state] +=1\n",
+        "\n",
+        "common_state, quantity = count_states.most_common()[-1]\n",
+        "print(\"state with less customers is: \", common_state)\n",
         "# evaluate the contents of the file"
       ]
     },
@@ -851,14 +900,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
-        "id": "k8M1DmA75Km7"
+        "id": "k8M1DmA75Km7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4010e96b-5deb-4f59-ed6e-6a870b7cf6dd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "More common lastname is:  Smith\n"
+          ]
+        }
+      ],
       "source": [
         "# open file and init vars\n",
-        "# evaluate the contents of the file"
+        "from collections import Counter\n",
+        "data = \"./sample_data/customers.csv\"\n",
+        "count_last_name = Counter()\n",
+        "\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(data, \"r\") as myfile:\n",
+        "  csvreader = csv.reader(myfile, delimiter=\",\")\n",
+        "  next(csvreader)\n",
+        "  for row in csvreader:\n",
+        "    last_name = row[2].strip()\n",
+        "    count_last_name[last_name] +=1\n",
+        "\n",
+        "common_last_name, quantity = count_last_name.most_common(1)[0]\n",
+        "print(\"More common lastname is: \", common_last_name)"
       ]
     },
     {
@@ -907,7 +983,7 @@
       },
       "outputs": [],
       "source": [
-        "# open and evaluate orders.csv"
+        "# open and evaluate orders.csv\n"
       ]
     },
     {
