--- a/customers_and_orders/customers_and_orders.ipynb
+++ b/customers_and_orders/customers_and_orders.ipynb
@@ -99,8 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oMnUFBFb2RUb",
-        "outputId": "05dc9570-2775-4548-fe30-d9a84fcbec35",
-        "collapsed": true
+        "outputId": "05dc9570-2775-4548-fe30-d9a84fcbec35"
       },
       "outputs": [
         {
@@ -977,13 +976,235 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
-        "id": "8ipJTrfs5QVM"
+        "id": "8ipJTrfs5QVM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2aaa8df3-d617-4541-ebc7-f45d432e21dd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of unique orders:  16673\n"
+          ]
+        }
+      ],
       "source": [
-        "# open and evaluate orders.csv\n"
+        "# open and evaluate orders.csv\n",
+        "from os.path import exists\n",
+        "import csv\n",
+        "\n",
+        "unique_orders = set()\n",
+        "datafile = \"./sample_data/orders.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(datafile, 'r') as fl:\n",
+        "  csvreader = csv.reader(fl, delimiter=',')\n",
+        "  for row in csvreader:\n",
+        "    order_id = row[1].strip()\n",
+        "    unique_orders.add(order_id)\n",
+        "print(\"Number of unique orders: \", len(unique_orders))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import defaultdict\n",
+        "\n",
+        "order = defaultdict(int)\n",
+        "total = 0\n",
+        "datafile = \"./sample_data/orders.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(datafile, 'r') as fl:\n",
+        "  csvreader = csv.reader(fl, delimiter=',')\n",
+        "  for row in csvreader:\n",
+        "    order_id = row[1].strip()\n",
+        "    order[order_id] +=1\n",
+        "    total +=1\n",
+        "total_order = len(order)\n",
+        "average = total/total_order\n",
+        "print(\"The average number of items per order is: \", round(average, 2))"
+      ],
+      "metadata": {
+        "id": "X5QD7mAGQHGJ",
+        "outputId": "fe4edbc0-6c50-48da-8454-5c268b9707c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The average number of items per order is:  1.76\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "items_order = defaultdict(int)\n",
+        "datafile = \"./sample_data/orders.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(datafile, 'r') as fl:\n",
+        "  csvreader = csv.reader(fl, delimiter=',')\n",
+        "  for row in csvreader:\n",
+        "    order_id = row[1].strip()\n",
+        "    items_order[order_id] +=1\n",
+        "max_items = max(items_order.values())\n",
+        "print(\"The highest number of items per order is: \", max_items)"
+      ],
+      "metadata": {
+        "id": "PSBJ5UlEQGpt",
+        "outputId": "52822c54-1d3b-454b-9a43-75d5aa66d791",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The highest number of items per order is:  35\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "october_order = set()\n",
+        "datafile = \"./sample_data/orders.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(datafile, 'r') as fl:\n",
+        "  csvreader = csv.reader(fl, delimiter=',')\n",
+        "  for row in csvreader:\n",
+        "    date = row[2].strip()\n",
+        "    order_id = row[1].strip()\n",
+        "    if date.startswith(\"2021-10\"):\n",
+        "      october_order.add(order_id)\n",
+        "print(\"The number of orders placed in October 2021 is: \", len(october_order))\n",
+        ""
+      ],
+      "metadata": {
+        "id": "n0wn3d9oUjrJ",
+        "outputId": "474a3544-8200-4674-90ab-fa35237f4e42",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number of orders placed in October 2021 is:  267\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "customer_order = defaultdict(float)\n",
+        "datafile = \"./sample_data/orders.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(datafile, 'r') as fl:\n",
+        "  csvreader = csv.reader(fl, delimiter=',')\n",
+        "  for row in csvreader:\n",
+        "    customer = row[0].strip()\n",
+        "    price = row[5].strip()\n",
+        "    date = row[2].strip()\n",
+        "    if date.startswith(\"2021\"):\n",
+        "      customer_order[customer] += float(price)\n",
+        "max_customer = max(customer_order, key=customer_order.get)\n",
+        "print(\"The customer spent the most amount of money in 2021 is: \", max_customer)\n",
+        "print(\"Total spent: $\", round(customer_order[max_customer], 2))\n"
+      ],
+      "metadata": {
+        "id": "onthZ6-yX7xo",
+        "outputId": "aba688ef-8d11-4352-bbfe-070b9c35c3f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The customer spent the most amount of money in 2021 is:  5172443\n",
+            "Total spent: $ 7675.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from collections import defaultdict\n",
+        "from datetime import datetime\n",
+        "\n",
+        "sales_per_month = defaultdict(int)\n",
+        "datafile = \"./sample_data/orders.csv\"\n",
+        "if not exists(datafile):\n",
+        "  raise SystemExit(\"You should run the first code cell and download the dataset files!\")\n",
+        "\n",
+        "with open(datafile, 'r') as fl:\n",
+        "  csvreader = csv.reader(fl, delimiter=',')\n",
+        "  for row in csvreader:\n",
+        "    date_str = row[2].strip()\n",
+        "    price_str = row[5].strip()\n",
+        "    price = float(price_str)\n",
+        "    date_obj = datetime.strptime(date_str, \"%Y-%m-%d %H:%M:%S.%f\")\n",
+        "    month = date_obj.strftime(\"%Y-%m\")\n",
+        "    sales_per_month[month] += price\n",
+        "\n",
+        "best_month = max(sales_per_month, key=sales_per_month.get)\n",
+        "print(\"The best month for sales is: \", best_month)\n",
+        "print(\"Total sales: $\", round(sales_per_month[best_month], 2))"
+      ],
+      "metadata": {
+        "id": "SYjaM3vsZyb7",
+        "outputId": "cd36266b-7b53-4913-f941-b233d749a0d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "could not convert string to float: 'Price'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-75-4338a1c6ab81>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mdate_str\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprice_str\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mprice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprice_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0mdate_obj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdate_str\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"%Y-%m-%d %H:%M:%S.%f\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0mmonth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdate_obj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%Y-%m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'Price'"
+          ]
+        }
       ]
     },
     {
